tests/invalid/bool_comparison_ordering/main.py
def run_case() -> None:
    a: bool = True
    b: bool = False
    result: bool = a < b


if __name__ == "__main__":
    run_case()
